--- a/src/pom.xml
+++ b/src/pom.xml
@@ -1,2 +1,10 @@
 <dependencies>
+    <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+    <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-core</artifactId>
+        <version>6.4.1.Final</version>
+        <type>pom</type>
+    </dependency>
+
 </dependencies>
